--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.amazonaws.services.kinesisanalytics</groupId>
     <artifactId>kinesisanalytics-flink-connectors</artifactId>
-    <version>1.0.3</version>
+    <version>1.0.4</version>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <flink.version>1.6.2</flink.version>
@@ -11,6 +11,7 @@
         <scala.binary.version>2.11</scala.binary.version>
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
+        <aws.sdk.version>1.11.633</aws.sdk.version>
         <artifactrepo.url>s3://kinesisanalytics-flink-artifacts/maven-artifacts</artifactrepo.url>
     </properties>
 
@@ -35,13 +36,13 @@
         <dependency>
             <groupId>com.amazonaws</groupId>
             <artifactId>aws-java-sdk-iam</artifactId>
-            <version>1.11.379</version>
+            <version>${aws.sdk.version}</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>com.amazonaws</groupId>
             <artifactId>aws-java-sdk-kinesis</artifactId>
-            <version>1.11.379</version>
+            <version>${aws.sdk.version}</version>
             <scope>compile</scope>
         </dependency>
         <!-- https://mvnrepository.com/artifact/com.google.guava/guava -->
