--- a/pom.xml
+++ b/pom.xml
@@ -1,33 +1,62 @@
 <?xml version="1.0" encoding="UTF-8"?>
+<!--
+Licensed to the Apache Software Foundation (ASF) under one
+or more contributor license agreements.  See the NOTICE file
+distributed with this work for additional information
+regarding copyright ownership.  The ASF licenses this file
+to you under the Apache License, Version 2.0 (the
+"License"); you may not use this file except in compliance
+with the License.  You may obtain a copy of the License at
+
+  http://www.apache.org/licenses/LICENSE-2.0
+
+Unless required by applicable law or agreed to in writing,
+software distributed under the License is distributed on an
+"AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
+KIND, either express or implied.  See the License for the
+specific language governing permissions and limitations
+under the License.
+-->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>com.amazonaws.services.kinesisanalytics</groupId>
-    <artifactId>kinesisanalytics-flink-connectors</artifactId>
-    <version>1.0.3</version>
+    <groupId>com.amazonaws</groupId>
+    <artifactId>aws-kinesisanalytics-flink</artifactId>
+    <version>1.1.0</version>
+    <packaging>jar</packaging>
+    <name>AWS Kinesis Analytics Java Flink Connectors</name>
+    <description>This library contains various Apache Flink connectors to connect to AWS data sources and sinks.</description>
+    <url>https://aws.amazon.com/kinesis/data-analytics/</url>
+    <developers>
+        <developer>
+            <id>amazonwebservices</id>
+            <organization>Amazon Web Services</organization>
+            <organizationUrl>https://aws.amazon.com/</organizationUrl>
+            <roles>
+                <role>developer</role>
+            </roles>
+        </developer>
+    </developers>
+    <licenses>
+        <license>
+            <name>The Apache License, Version 2.0</name>
+            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+        </license>
+    </licenses>
+
+    <scm>
+        <connection>scm:git:https://github.com/aws/aws-kinesisanalytics-flink-connectors.git</connection>
+        <developerConnection>scm:git:git@github.com:aws/aws-kinesisanalytics-flink-connectors.git</developerConnection>
+        <url>https://github.com/aws/aws-kinesisanalytics-flink-connectors/tree/master</url>
+    </scm>
+
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <flink.version>1.6.2</flink.version>
         <java.version>1.8</java.version>
         <scala.binary.version>2.11</scala.binary.version>
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
-        <artifactrepo.url>s3://kinesisanalytics-flink-artifacts/maven-artifacts</artifactrepo.url>
+        <artifactrepo.url>https://mvnrepository.com/artifact/com.amazonaws/aws-kinesisanalytics-flink</artifactrepo.url>
     </properties>
-
-    <!--
-    <repositories>
-        <repository>
-            <id>apache.snapshots</id>
-            <name>Apache Development Snapshot Repository</name>
-            <url>https://repository.apache.org/content/repositories/snapshots/</url>
-            <releases>
-                <enabled>false</enabled>
-            </releases>
-            <snapshots>
-                <enabled>true</enabled>
-            </snapshots>
-        </repository>
-    </repositories> -->
 
     <dependencies>
 
@@ -69,6 +98,7 @@
             <groupId>org.apache.flink</groupId>
             <artifactId>flink-json</artifactId>
             <version>${flink.version}</version>
+            <scope>provided</scope>
         </dependency>
 
         <!-- Add logging framework, to produce console output when running in the IDE. -->
@@ -108,29 +138,16 @@
             <scope>test</scope>
         </dependency>
 
-
     </dependencies>
 
-    <!-- maven-s3-wagon reads `<distributionManagement>` to determine where to upload the artifacts. -->
     <distributionManagement>
-        <repository>
-            <id>com.amazonaws.services.kinesisanalytics</id>
-            <url>${artifactrepo.url}/release</url>
-        </repository>
         <snapshotRepository>
-            <id>com.amazonaws.services.kinesisanalytics</id>
-            <url>${artifactrepo.url}/snapshot</url>
+            <id>ossrh</id>
+            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
         </snapshotRepository>
     </distributionManagement>
 
     <build>
-        <extensions>
-            <extension>
-                <groupId>com.github.seahen</groupId>
-                <artifactId>maven-s3-wagon</artifactId>
-                <version>1.3.0</version>
-            </extension>
-        </extensions>
         <plugins>
 
             <!-- Java Compiler -->
@@ -186,9 +203,6 @@
 
         <pluginManagement>
             <plugins>
-
-                <!-- If you want to use Java 8 Lambda Expressions uncomment the following lines -->
-
                 <plugin>
                     <artifactId>maven-compiler-plugin</artifactId>
                     <configuration>
@@ -278,4 +292,3 @@
         </profile>
     </profiles>
 </project>
-
