Add support for STS assume role credentials provider

--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,11 @@ under the License.
             <version>1.11.379</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>com.amazonaws</groupId>
+            <artifactId>aws-java-sdk-sts</artifactId>
+            <version>1.11.379</version>
+        </dependency>
         <!-- https://mvnrepository.com/artifact/com.google.guava/guava -->
         <dependency>
             <groupId>com.google.guava</groupId>
